--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "jszip": "^3.9.1",
     "vue": "^2.6.14",
     "vue-good-table": "^2.21.11",
     "vue-router": "^3.5.1",
